yaml/SignalWave/rrd-graph.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rrd-graph
  namespace: signalwave
  labels:
    app: rrd-graph
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rrd-graph
  template:
    metadata:
      labels:
        app: rrd-graph
    spec:
      containers:
      - name: rrd-graph
        image: harbor.home.virtualelephant.com/ve-lab/rrdgraph:latest
        imagePullPolicy: Always
      volumes:
      - name: rrd-storage
        persistentVolumeClaim:
          claimName: shared-pvc
