yaml/SignalWave/rrd-reader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rrd-reader
  namespace: signalwave
  labels:
    app: rrd-reader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rrd-reader
  template:
    metadata:
      labels:
        app: rrd-reader
    spec:
      containers:
      - name: rrd-reader
        image: harbor.home.virtualelephant.com/ve-lab/rrd-reader:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: rrd-storage
          mountPath: /app/rrd_files
      volumes:
      - name: rrd-storage
        persistentVolumeClaim:
          claimName: rrdtool-pvc
