yaml/SignalWave/frontend-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-signalwave
  namespace: signalwave
  labels:
    app: nginx-signalwave
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-signalwave
  template:
    metadata:
      labels:
        app: nginx-signalwave
    spec:
      containers:
      - name: nginx-signalwave
        image: harbor.home.virtualelephant.com/ve-lab/nginx-signalwave:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: graph-storage
          mountPath: /usr/share/nginx/html/graphs
      volumes:
      - name: graph-storage
        persistentVolumeClaim:
          claimName: shared-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-signalwave-service
  namespace: signalwave
spec:
  selector:
    app: nginx-signalwave
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
