yaml/SignalWave/influx-reader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signalwave-influx-reader
  namespace: signalwave
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influx-reader
  template:
    metadata:
      labels:
        app: influx-reader
    spec:
      containers:
      - name: influx-reader
        image: harbor.home.virtualelephant.com/ve-lab/influx-reader:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: metrics
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: signalwave-influx-reader
  namespace: signalwave
spec:
  selector:
    app: influx-reader
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
