yaml/SignalWave/publisher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signalwave-publisher
  namespace: signalwave

spec:
  replicas: 1
  selector:
    matchLabels:
      app: publisher
  template:
    metadata:
      labels:
        app: publisher
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8080"
    spec:
      containers:
      - name: publisher
        image: harbor.home.virtualelephant.com/ve-lab/publisher:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /metrics
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 2
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /metrics
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 2
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: signalwave-publisher
  namespace: signalwave
spec:
  selector:
    app: signalwave-publisher
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
